src/namespace-administration/administration.Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: administration
  name: administration
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
