src/namespace-administration/administration.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: administration-ingress
  namespace: administration
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    author: thomas-rausch
spec:
  ingressClassName: nginx
  rules:
  - host: busybox-administration.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: busybox
            port:
              number: 22
